# miles-cpp

./: .gitignore  CMakeLists.txt  README.md
cpp/: CMakeLists.txt
cpp/include/: AppInfo.h  Dummy.h  JsonFile.h  LoggerFilesystemPath.h  LoggerInitializer.h
cpp/src/: AppInfo.cpp  Dummy.cpp  JsonFile.cpp  LoggerInitializer.cpp
test/: CMakeLists.txt
test/src/: test.cpp
